Fixed navbar spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,7 @@ em {
   font-size: 24px;
   line-height: 20px;
   letter-spacing: 0.05em;
+  padding-top: 30px;
   /* color: var(--base-color-black); */
 }
 
